Fix Spacing Issues in About Section

--- a/style.css
+++ b/style.css
@@ -292,10 +292,9 @@ section{
 }
 
 #about{
-    margin-bottom: 50px;
-    padding-top: 40px;
-    min-height: 100vh;
-    /* display: grid; */
+    margin-bottom: 20px;
+    padding: 20px 0px;
+    min-height: calc(100vh - 40px);
 }
 #about-content{
     margin: auto;
@@ -313,10 +312,8 @@ section{
     background: linear-gradient(135deg, var(--c2), rgba(var(--c2-rgb), .5) 70%);
     width: calc(100% - 60px);
     padding: 30px 30px;
-    /* padding-top: 30px; */
     border-radius: 20px;
     line-height: 23px;
-    /* border-bottom-left-radius: 0px; */
     font-size: 1.05em;
 }
 .about-para span{
@@ -437,7 +434,6 @@ section{
     padding: 15px 20px;
     display: grid;
     grid-template-rows: max-content 1fr max-content;
-    /* text-align: center; */
 }
 .project-title-div{
     display: grid;
@@ -475,7 +471,6 @@ section{
     display: flex;
     flex-flow: row;
     column-gap: 10px;
-    /* margin: auto; */
 }
 .project-tech{
     background: rgba(var(--c1-rgb), .2);
